--- a/examples/7guis-2-temperature-vue/package.json
+++ b/examples/7guis-2-temperature-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "7guis-2-temperature-vue",
+  "name": "@xstate/example-7guis-2-temperature-vue",
   "private": true,
   "version": "0.0.0",
   "type": "module",
