--- a/examples/7guis-flight-booker-react/package.json
+++ b/examples/7guis-flight-booker-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "7guis-flight-booker-react",
+  "name": "@xstate/example-7guis-flight-booker-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
