--- a/examples/snake-react/package.json
+++ b/examples/snake-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snake-react",
+  "name": "@xstate/example-snake-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
