--- a/examples/todomvc-react/package.json
+++ b/examples/todomvc-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todomvc-react",
+  "name": "@xstate/example-todomvc-react",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
