--- a/examples/workflow-media-scanner/package.json
+++ b/examples/workflow-media-scanner/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mediaScanner",
+  "name": "@xstate/example-workflow-media-scanner",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
