--- a/examples/7guis-temperature-react/package.json
+++ b/examples/7guis-temperature-react/package.json
@@ -17,5 +17,6 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "typescript": "^5.5.4",
     "vite": "^5.3.5"
-  }
+  },
+  "name": "@xstate/example-7guis-temperature-react"
 }
