--- a/examples/express-workflow/package.json
+++ b/examples/express-workflow/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-workflow",
+  "name": "@xstate/example-express-workflow",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
