--- a/examples/friends-list-react/package.json
+++ b/examples/friends-list-react/package.json
@@ -18,5 +18,6 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "typescript": "^5.5.4",
     "vite": "^5.3.5"
-  }
+  },
+  "name": "@xstate/example-friends-list-react"
 }
