--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -18,7 +18,7 @@
       "entry": ["src/index.ts", "src/server.ts"]
     },
     "packages/xstate-store": {
-      "entry": ["src/index.ts", "src/react.ts"]
+      "entry": ["src/index.ts", "src/react.ts", "src/solid.ts"]
     },
     "packages/xstate-svelte": {
       "typescript": "test/tsconfig.json"
@@ -37,6 +37,7 @@
     "synckit",
     // package.json#exports aren't added as entry points, because `dist/` is .gitignored
     "react",
+    "solid-js",
     "xstate",
     "@types/ws"
   ]
