--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "test": "jest",
     "test:core": "jest packages/core",
     "changeset": "changeset",
-    "version": "changeset version && node ./scripts/bump-peer-dep-ranges.js",
-    "publish": "pnpm -r publish --access=public && changeset tag"
+    "release": "pnpm -r publish --access=public && changeset tag",
+    "version": "changeset version"
   },
   "repository": {
     "type": "git",
@@ -53,7 +53,6 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@manypkg/cli": "^0.21.4",
-    "@manypkg/get-packages": "^1.1.3",
     "@preconstruct/cli": "^2.8.1",
     "@testing-library/vue": "^6.6.1",
     "@types/jest": "^29.5.10",
