--- a/docs/fr/sandboxes/todomvc/package.json
+++ b/docs/fr/sandboxes/todomvc/package.json
@@ -18,6 +18,6 @@
     "xstate",
     "react"
   ],
-  "name": "xstate-todomvc",
+  "name": "xstate-todomvc-fr",
   "description": "The TodoMVC app implemented with React (using hooks) and XState version 4."
 }
