--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -58,8 +58,8 @@
     "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/use-sync-external-store": "^0.0.3",
     "@xstate/react": "workspace:^",
+    "@xstate/vue": "workspace:^",
     "immer": "^10.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
