switch package manager to pnpm (#4987)
* switch package manager to pnpm

* use pnpm in github actions

* run "Install pnpm" action before node setup

* fix typecheck issues for core, react, store packages

* annotate actorRefRef

* add xstate-svelte/test to workspace with @xstate/svelte devDep

* re-add react/react-dom devDeps to xstate-store

* re-add immer devDep to xstate-store

* add pnpm caching to actions workflows

* remove pnpm caching from actions workflows

* fix changesets action publish+version commands

* replace xstate version in peerDeps with workspace:^

* update release to use pnpm publish and NODE_AUTH_TOKEN

* remove release script

* set packageManager to pnpm@9.7.1

* call changeset tag when publishing

* use packageManager in place of with.version

* update pnpm-lock.yaml

* remove bump-peer-dep-ranges script

* remove xstate-svelte/test from workspaces

* fix svelte-check errors

* use pnpm for knip ci-check

* resolve knip errors

* Update pnpm-workspace.yaml

---------

Co-authored-by: Mateusz Burzyński <mateuszburzynski@gmail.com>

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -119,10 +119,10 @@
   "homepage": "https://github.com/statelyai/xstate/tree/main/packages/core#readme",
   "devDependencies": {
     "@scion-scxml/test-framework": "^2.0.15",
-    "@xstate-repo/jest-utils": "*",
+    "@xstate-repo/jest-utils": "workspace:^",
     "ajv": "^8.12.0",
     "pkg-up": "^3.1.0",
-    "rxjs": "^7.8.0",
+    "rxjs": "^7.8.1",
     "xml-js": "^1.6.11"
   },
   "preconstruct": {
