--- a/packages/xstate-graph/package.json
+++ b/packages/xstate-graph/package.json
@@ -40,10 +40,10 @@
     "url": "https://github.com/statelyai/xstate/issues"
   },
   "peerDependencies": {
-    "xstate": "^5.18.1"
+    "xstate": "workspace:^"
   },
   "devDependencies": {
-    "xstate": "5.18.1"
+    "xstate": "workspace:^"
   },
   "dependencies": {}
 }
