--- a/packages/xstate-inspect/package.json
+++ b/packages/xstate-inspect/package.json
@@ -53,12 +53,12 @@
   "devDependencies": {
     "@types/ws": "^8.2.2",
     "ws": "^8.4.0",
-    "xstate": "5.18.1"
+    "xstate": "workspace:^"
   },
   "peerDependencies": {
     "@types/ws": "^8.0.0",
     "ws": "^8.0.0",
-    "xstate": "^5.18.1"
+    "xstate": "workspace:^"
   },
   "peerDependenciesMeta": {
     "@types/ws": {
