--- a/packages/xstate-react/package.json
+++ b/packages/xstate-react/package.json
@@ -55,7 +55,7 @@
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "xstate": "^5.18.1"
+    "xstate": "workspace:^"
   },
   "peerDependenciesMeta": {
     "xstate": {
@@ -71,9 +71,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/use-sync-external-store": "^0.0.3",
+    "@xstate-repo/jest-utils": "workspace:^",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "rxjs": "^7.8.0",
-    "xstate": "5.18.1"
+    "rxjs": "^7.8.1",
+    "xstate": "workspace:^"
   }
 }
