--- a/docs/package.json
+++ b/docs/package.json
@@ -7,11 +7,11 @@
   "author": "David Khourshid",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "yarn vuepress dev .",
+    "docs:dev": "pnpm vuepress dev .",
     "docs:readme": "cpy ../README.md .",
-    "docs:build": "npm run docs:readme && vuepress build .",
-    "docs:pdf": "npm run docs:build && vuepress export .",
-    "docs:publish": "npm run docs:build && gh-pages --dist .vuepress/dist --dest ./docs"
+    "docs:build": "pnpm run docs:readme && vuepress build .",
+    "docs:pdf": "pnpm run docs:build && vuepress export .",
+    "docs:publish": "pnpm run docs:build && gh-pages --dist .vuepress/dist --dest ./docs"
   },
   "dependencies": {
     "@vuepress/plugin-google-analytics": "^1.8.2",
