--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -55,6 +55,7 @@
     "url": "https://github.com/statelyai/xstate/issues"
   },
   "devDependencies": {
+    "@statelyai/inspect": "^0.4.0",
     "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
