--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -69,7 +69,7 @@
     "xstate": "workspace:^"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "^18.2.0 || ^19.0.0",
     "solid-js": "^1.7.6"
   },
   "peerDependenciesMeta": {
