--- a/packages/xstate-react/package.json
+++ b/packages/xstate-react/package.json
@@ -54,7 +54,7 @@
     "url": "https://github.com/statelyai/xstate/issues"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0-0",
     "xstate": "workspace:^"
   },
   "peerDependenciesMeta": {
