[core] Transition function (#4954)
* Use defaultActionExecutor (temp)

* Convert entry/exit events

* UnknownAction -> UnknownActionObject

* Use defaultActionExecutor

* Cleanup

* WIP

* Fixing tests

* Add toJSON to built-in actions

* Add docs

* Update packages/core/src/actions/spawnChild.ts

Co-authored-by: Mateusz Burzyński <mateuszburzynski@gmail.com>

* Update packages/core/src/stateUtils.ts

Co-authored-by: Mateusz Burzyński <mateuszburzynski@gmail.com>

* Unify convertAction

* Update packages/core/src/stateUtils.ts

Co-authored-by: Mateusz Burzyński <mateuszburzynski@gmail.com>

* Remove TODO

* Introduce `executeAction`, remove `action.execute()`

* Enqueue actions test

* Fix type error

* Expose `executeAction(…)`

* Provide actor to action

* Fix type issue

* Changeset

* Deprecate getNextSnapshot and getInitialSnapshot

* Update packages/core/src/stateUtils.ts

Co-authored-by: Mateusz Burzyński <mateuszburzynski@gmail.com>

* Restore getNextSnapshot.test.ts file

* function -> exec

* Delayed raise action test

* Getting close

* Update scheduler to handle delayed sendTo actions without an initially resolved target

* Fix types

* WIP

* Remove test code

* Default actor

* Serialization in test

* Revert invoke.test.ts

* Cancel action execution

* WIP

* Update launch.json and jest.config.js

* Proof of concept for invoked actions

* Include resolved input & systemId in spawnChild action

* Refactor action types to use ExecutableActionObject and add startedAt timestamp to raise and send actions

* Add ExecutableActionsFrom

* Clean up types

* Lint

* Lint for real

* Lint lint

* Back to any

* Update packages/core/test/transition.test.ts

Co-authored-by: Mateusz Burzyński <mateuszburzynski@gmail.com>

* use sleep

* remove outdated comment

* add `ExecutableSendToAction` to `SpecialExecutableAction`

* remove `startedAt`

* add failing raise test case

* tweak test title

* add extra cancel tests

* add failing test for invalid event delivery



--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest.js"
       }
     },
     {
@@ -30,7 +30,7 @@
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest.js"
       }
     }
   ]
