Update store examples

--- a/examples/local-store-counter-react/package.json
+++ b/examples/local-store-counter-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "store-counter-react",
+  "name": "local-store-counter-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
