--- a/packages/core/actions/package.json
+++ b/packages/core/actions/package.json
@@ -1,7 +1,7 @@
 {
-  "main": "dist/xstate-actions.cjs.js",
-  "module": "dist/xstate-actions.esm.js",
-  "umd:main": "dist/xstate-actions.umd.min.js",
+  "main": "../dist/xstate-actions.cjs.js",
+  "module": "../dist/xstate-actions.esm.js",
+  "umd:main": "../dist/xstate-actions.umd.min.js",
   "preconstruct": {
     "umdName": "XStateActions"
   }
