--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,59 +22,59 @@
     },
     "./guards": {
       "types": {
-        "import": "./guards/dist/xstate-guards.cjs.mjs",
-        "default": "./guards/dist/xstate-guards.cjs.js"
+        "import": "./dist/xstate-guards.cjs.mjs",
+        "default": "./dist/xstate-guards.cjs.js"
       },
       "development": {
-        "module": "./guards/dist/xstate-guards.development.esm.js",
-        "import": "./guards/dist/xstate-guards.development.cjs.mjs",
-        "default": "./guards/dist/xstate-guards.development.cjs.js"
+        "module": "./dist/xstate-guards.development.esm.js",
+        "import": "./dist/xstate-guards.development.cjs.mjs",
+        "default": "./dist/xstate-guards.development.cjs.js"
       },
-      "module": "./guards/dist/xstate-guards.esm.js",
-      "import": "./guards/dist/xstate-guards.cjs.mjs",
-      "default": "./guards/dist/xstate-guards.cjs.js"
+      "module": "./dist/xstate-guards.esm.js",
+      "import": "./dist/xstate-guards.cjs.mjs",
+      "default": "./dist/xstate-guards.cjs.js"
     },
     "./actions": {
       "types": {
-        "import": "./actions/dist/xstate-actions.cjs.mjs",
-        "default": "./actions/dist/xstate-actions.cjs.js"
+        "import": "./dist/xstate-actions.cjs.mjs",
+        "default": "./dist/xstate-actions.cjs.js"
       },
       "development": {
-        "module": "./actions/dist/xstate-actions.development.esm.js",
-        "import": "./actions/dist/xstate-actions.development.cjs.mjs",
-        "default": "./actions/dist/xstate-actions.development.cjs.js"
+        "module": "./dist/xstate-actions.development.esm.js",
+        "import": "./dist/xstate-actions.development.cjs.mjs",
+        "default": "./dist/xstate-actions.development.cjs.js"
       },
-      "module": "./actions/dist/xstate-actions.esm.js",
-      "import": "./actions/dist/xstate-actions.cjs.mjs",
-      "default": "./actions/dist/xstate-actions.cjs.js"
+      "module": "./dist/xstate-actions.esm.js",
+      "import": "./dist/xstate-actions.cjs.mjs",
+      "default": "./dist/xstate-actions.cjs.js"
     },
     "./dev": {
       "types": {
-        "import": "./dev/dist/xstate-dev.cjs.mjs",
-        "default": "./dev/dist/xstate-dev.cjs.js"
+        "import": "./dist/xstate-dev.cjs.mjs",
+        "default": "./dist/xstate-dev.cjs.js"
       },
       "development": {
-        "module": "./dev/dist/xstate-dev.development.esm.js",
-        "import": "./dev/dist/xstate-dev.development.cjs.mjs",
-        "default": "./dev/dist/xstate-dev.development.cjs.js"
+        "module": "./dist/xstate-dev.development.esm.js",
+        "import": "./dist/xstate-dev.development.cjs.mjs",
+        "default": "./dist/xstate-dev.development.cjs.js"
       },
-      "module": "./dev/dist/xstate-dev.esm.js",
-      "import": "./dev/dist/xstate-dev.cjs.mjs",
-      "default": "./dev/dist/xstate-dev.cjs.js"
+      "module": "./dist/xstate-dev.esm.js",
+      "import": "./dist/xstate-dev.cjs.mjs",
+      "default": "./dist/xstate-dev.cjs.js"
     },
     "./actors": {
       "types": {
-        "import": "./actors/dist/xstate-actors.cjs.mjs",
-        "default": "./actors/dist/xstate-actors.cjs.js"
+        "import": "./dist/xstate-actors.cjs.mjs",
+        "default": "./dist/xstate-actors.cjs.js"
       },
       "development": {
-        "module": "./actors/dist/xstate-actors.development.esm.js",
-        "import": "./actors/dist/xstate-actors.development.cjs.mjs",
-        "default": "./actors/dist/xstate-actors.development.cjs.js"
+        "module": "./dist/xstate-actors.development.esm.js",
+        "import": "./dist/xstate-actors.development.cjs.mjs",
+        "default": "./dist/xstate-actors.development.cjs.js"
       },
-      "module": "./actors/dist/xstate-actors.esm.js",
-      "import": "./actors/dist/xstate-actors.cjs.mjs",
-      "default": "./actors/dist/xstate-actors.cjs.js"
+      "module": "./dist/xstate-actors.esm.js",
+      "import": "./dist/xstate-actors.cjs.mjs",
+      "default": "./dist/xstate-actors.cjs.js"
     },
     "./package.json": "./package.json"
   },
