--- a/packages/xstate-inspect/server/package.json
+++ b/packages/xstate-inspect/server/package.json
@@ -1,4 +1,4 @@
 {
-  "main": "dist/xstate-inspect-server.cjs.js",
-  "module": "dist/xstate-inspect-server.esm.js"
+  "main": "../dist/xstate-inspect-server.cjs.js",
+  "module": "../dist/xstate-inspect-server.esm.js"
 }
