--- a/packages/xstate-store/solid/package.json
+++ b/packages/xstate-store/solid/package.json
@@ -1,4 +1,4 @@
 {
-  "main": "dist/xstate-store-solid.cjs.js",
-  "module": "dist/xstate-store-solid.esm.js"
+  "main": "../dist/xstate-store-solid.cjs.js",
+  "module": "../dist/xstate-store-solid.esm.js"
 }
