fix solid but break svelte??

--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -68,6 +68,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "solid-js": "^1.7.6",
+    "vite-plugin-solid": "^2.10.2",
     "vue": "^3.4.35",
     "xstate": "workspace:^"
   },
