--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "esnext",
     "isolatedModules": true,
-    "moduleResolution": "node16",
-    "module": "node16",
+    "moduleResolution": "nodenext",
+    "module": "nodenext",
     "allowImportingTsExtensions": true,
     "noEmit": true,
     "skipLibCheck": true,
