--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@eslint/js": "^9.7.0",
+    "@eslint/js": "^9.26.0",
     "@jest/types": "^29.6.3",
     "@manypkg/cli": "^0.21.4",
     "@preconstruct/cli": "^2.8.1",
@@ -64,7 +64,8 @@
     "@vue/vue3-jest": "^29.2.6",
     "babel-jest": "^29.7.0",
     "babel-preset-solid": "^1.8.4",
-    "eslint": "^9.7.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-jsdoc": "^50.6.14",
     "globals": "^15.8.0",
     "husky": "^3.1.0",
     "jest": "^29.7.0",
@@ -80,7 +81,7 @@
     "svelte-jester": "^2.3.2",
     "synckit": "^0.8.5",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.16.0",
+    "typescript-eslint": "^8.32.1",
     "vue": "^3.0.11"
   },
   "husky": {
