--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -76,6 +76,20 @@
       "import": "./actors/dist/xstate-actors.cjs.mjs",
       "default": "./actors/dist/xstate-actors.cjs.js"
     },
+    "./graph": {
+      "types": {
+        "import": "./graph/dist/xstate-graph.cjs.mjs",
+        "default": "./graph/dist/xstate-graph.cjs.js"
+      },
+      "development": {
+        "module": "./graph/dist/xstate-graph.development.esm.js",
+        "import": "./graph/dist/xstate-graph.development.cjs.mjs",
+        "default": "./graph/dist/xstate-graph.development.cjs.js"
+      },
+      "module": "./graph/dist/xstate-graph.esm.js",
+      "import": "./graph/dist/xstate-graph.cjs.mjs",
+      "default": "./graph/dist/xstate-graph.cjs.js"
+    },
     "./package.json": "./package.json"
   },
   "imports": {
