--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -28,7 +28,8 @@
     // used for `#is-development` conditional import
     "packages/**/{true,false}.ts",
     // file acts as a type test
-    "packages/xstate-svelte/test/interpreterAsReadable.svelte"
+    "packages/xstate-svelte/test/interpreterAsReadable.svelte",
+    "docs/**"
   ],
   "ignoreBinaries": ["svelte-check", "docs:build"],
   "ignoreDependencies": [
@@ -37,6 +38,11 @@
     "react",
     "solid-js",
     "xstate",
-    "@types/ws"
-  ]
+    "@types/ws",
+    "vitest"
+  ],
+  "vitest": {
+    "config": ["vitest.config.mts", "vitest.config.**.mts"],
+    "entry": ["**/*.{test,spec}.{js,ts,tsx,jsx,mts,mjs}"]
+  }
 }
