--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "synckit": "^0.8.5",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
-    "vitest": "^2.0.3",
-    "vue": "^3.4.35"
+    "vitest": "^2.0.3"
   },
   "husky": {
     "hooks": {
