Move to vitest (updated) (#5293)
* install and create basic vitest configs

* replace jest.* with vi.* in tests

* replace done callback with promise resolve in tests

* use fake timers to avoid errors being thrown in separate microtask

* install happy-dom

* fix @xstate/svelte tests

* fix @xstate/vue tests

* fix @xstate/solid tests

* update inline error snapshots

* fix @xstate/graph test error and update snapshots

* replace jest.Mock with vitest Mock import

* replace done.fail with promise reject

* use happy-dom for @xstate/inspect tests

* add vue plugin for @xstate/store tests

* use happy-dom for @xstate/store tests

* use setTimeout from node:timers/promises as sleep

* fix @xstate/react console.error spy tests

* fix xstate interpreter console.error test spy

* remove toMatchMockCallsInlineSnapshot

* remove jest config/dependencies/scripts

* add missing @xstate/store devDependencies

* use happy-dom for @xstate/react tests

* fix core errors tests

* use --project flag with vitest for test:core script

* fix core scxml tests

* enable vitest/globals types in @xstate/svelte tests

* disable verbatimModuleSyntax for @xstate/svelte tests

* fix @xstate/svelte test type error

* replace jest with vitest in .vscode/launch.json

* install `happy-dom`

* fix snapshots

* fixed a thing

* fix solid but break svelte??

* update `vite-plugin-solid`

* update solid

* tweak type-related stuff

* fixed svelte

* stuff

* use withResolvers

* stuff

* fix type

* fix snapshot

* stuff

* Fix solid

* Update lockfile

* idk

* Knip it in the bud

* Sigh

* warnSpy

* use `restoreAllMocks`

* avoid `as any`, just update Vitest

---------

Co-authored-by: with-heart <with.heart+git@pm.me>
Co-authored-by: Mateusz Burzyński <mateuszburzynski@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,34 +4,24 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Jest Current File",
-      "runtimeExecutable": "sh",
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": ["${file}", "--config", "jest.config.js", "--no-cache"],
+      "name": "Vitest Current Test File",
+      "autoAttachChildProcesses": true,
+      "skipFiles": ["<node_internals>/**", "**/node_modules/**"],
+      "program": "${workspaceRoot}/node_modules/vitest/vitest.mjs",
+      "args": ["run", "${relativeFile}"],
       "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen",
-      "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest.js"
-      }
+      "internalConsoleOptions": "neverOpen"
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "Jest Current File (no timeout)",
-      "runtimeExecutable": "sh",
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": [
-        "${file}",
-        "--config",
-        "jest.config.js",
-        "--no-cache",
-        "--testTimeout=2147483647"
-      ],
+      "name": "Vitest Current Test File (no timeout)",
+      "autoAttachChildProcesses": true,
+      "skipFiles": ["<node_internals>/**", "**/node_modules/**"],
+      "program": "${workspaceRoot}/node_modules/vitest/vitest.mjs",
+      "args": ["run", "${relativeFile}", "--testTimeout=2147483647"],
       "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen",
-      "windows": {
-        "program": "${workspaceFolder}/node_modules/jest/bin/jest.js"
-      }
+      "internalConsoleOptions": "neverOpen"
     }
   ]
 }
