--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -29,16 +29,21 @@
     // used for `#is-development` conditional import
     "packages/**/{true,false}.ts",
     // file acts as a type test
-    "packages/xstate-svelte/test/interpreterAsReadable.svelte"
+    "packages/xstate-svelte/test/interpreterAsReadable.svelte",
+    "docs/**"
   ],
   "ignoreBinaries": ["svelte-check", "docs:build"],
   "ignoreDependencies": [
-    "@xstate-repo/jest-utils/setup",
     "synckit",
     // package.json#exports aren't added as entry points, because `dist/` is .gitignored
     "react",
     "solid-js",
     "xstate",
-    "@types/ws"
-  ]
+    "@types/ws",
+    "vitest"
+  ],
+  "vitest": {
+    "config": ["vitest.config.mts", "vitest.config.**.mts"],
+    "entry": ["**/*.{test,spec}.{js,ts,tsx,jsx,mts,mjs}"]
+  }
 }
