--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "fix": "manypkg fix",
     "lint": "eslint --cache --quiet",
     "typecheck": "tsc",
-    "test": "jest",
-    "test:core": "jest packages/core",
+    "test": "vitest",
+    "test:core": "vitest --project xstate",
     "changeset": "changeset",
     "release": "pnpm -r publish --access=public && changeset tag",
     "version": "changeset version"
@@ -54,35 +54,23 @@
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@eslint/js": "^9.26.0",
-    "@jest/types": "^29.6.3",
     "@manypkg/cli": "^0.21.4",
     "@preconstruct/cli": "^2.8.1",
-    "@testing-library/vue": "^6.6.1",
-    "@types/jest": "^29.5.10",
     "@types/node": "^20.14.13",
-    "@vue/compiler-sfc": "^3.0.11",
-    "@vue/vue3-jest": "^29.2.6",
-    "babel-jest": "^29.7.0",
     "babel-preset-solid": "^1.8.4",
     "eslint": "^9.26.0",
     "eslint-plugin-jsdoc": "^50.6.14",
     "globals": "^15.8.0",
+    "happy-dom": "^17.4.4",
     "husky": "^3.1.0",
-    "jest": "^29.7.0",
-    "jest-config": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-resolve": "^29.7.0",
-    "jest-snapshot": "^29.7.0",
-    "jest-watch-typeahead": "^2.2.2",
     "knip": "^5.27.0",
     "lint-staged": "^8.2.1",
     "prettier": "^3.1.0",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "svelte-jester": "^2.3.2",
     "synckit": "^0.8.5",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
-    "vue": "^3.0.11"
+    "vitest": "^3.2.2"
   },
   "husky": {
     "hooks": {
@@ -97,10 +85,7 @@
   },
   "pnpm": {
     "patchedDependencies": {
-      "@vue/test-utils@2.4.6": "patches/@vue__test-utils@2.4.6.patch",
-      "jest-snapshot@29.7.0": "patches/jest-snapshot@29.7.0.patch",
-      "solid-js@1.8.18": "patches/solid-js@1.8.18.patch",
-      "solid-testing-library@0.3.0": "patches/solid-testing-library@0.3.0.patch"
+      "@vue/test-utils@2.4.6": "patches/@vue__test-utils@2.4.6.patch"
     }
   },
   "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
