--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -55,17 +55,21 @@
     "url": "https://github.com/statelyai/xstate/issues"
   },
   "devDependencies": {
+    "@solidjs/testing-library": "^0.8.10",
     "@statelyai/inspect": "^0.4.0",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/vue": "^8.1.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-vue": "^5.1.2",
     "@xstate/react": "workspace:^",
     "@xstate/vue": "workspace:^",
     "immer": "^10.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "solid-js": "^1.7.6",
-    "solid-testing-library": "^0.3.0",
+    "solid-js": "^1.9.7",
+    "vite-plugin-solid": "^2.11.6",
+    "vue": "^3.4.35",
     "xstate": "workspace:^"
   },
   "peerDependencies": {
