--- a/packages/xstate-vue/package.json
+++ b/packages/xstate-vue/package.json
@@ -62,9 +62,9 @@
     }
   },
   "devDependencies": {
-    "@testing-library/vue": "^6.6.1",
-    "@vue/compiler-sfc": "^3.0.11",
-    "vue": "^3.0.11",
+    "@testing-library/vue": "^8.1.0",
+    "@vitejs/plugin-vue": "^5.1.2",
+    "vue": "^3.4.35",
     "xstate": "workspace:^"
   }
 }
