--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -41,6 +41,7 @@
     },
     "./package.json": "./package.json"
   },
+  "types": "dist/xstate-store.cjs.d.ts",
   "sideEffects": false,
   "files": [
     "dist",
