[@xstate/store] Export undo/redo package (#5326)
* Trying to export undo

* Add undo export

* Changeset

* Remove dep

* fix import

---------

Co-authored-by: Mateusz Burzyński <mateuszburzynski@gmail.com>

--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -12,6 +12,15 @@
   "main": "dist/xstate-store.cjs.js",
   "module": "dist/xstate-store.esm.js",
   "exports": {
+    "./undo": {
+      "types": {
+        "import": "./undo/dist/xstate-store-undo.cjs.mjs",
+        "default": "./undo/dist/xstate-store-undo.cjs.js"
+      },
+      "module": "./undo/dist/xstate-store-undo.esm.js",
+      "import": "./undo/dist/xstate-store-undo.cjs.mjs",
+      "default": "./undo/dist/xstate-store-undo.cjs.js"
+    },
     ".": {
       "types": {
         "import": "./dist/xstate-store.cjs.mjs",
@@ -45,7 +54,8 @@
   "files": [
     "dist",
     "react",
-    "solid"
+    "solid",
+    "undo"
   ],
   "repository": {
     "type": "git",
@@ -89,7 +99,8 @@
     "entrypoints": [
       "./index.ts",
       "./react.ts",
-      "./solid.ts"
+      "./solid.ts",
+      "./undo.ts"
     ]
   }
 }
