--- a/packages/xstate-react/package.json
+++ b/packages/xstate-react/package.json
@@ -74,6 +74,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rxjs": "^7.8.1",
-    "xstate": "workspace:^"
+    "xstate": "workspace:^",
+    "zod": "^3.25.51"
   }
 }
