--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "preinstall": "node ./scripts/ensure-pnpm.js",
     "postinstall": "manypkg check && preconstruct dev",
     "build": "preconstruct build",
+    "watch": "preconstruct watch",
     "fix": "manypkg fix",
     "lint": "eslint --cache --quiet",
     "typecheck": "tsc",
@@ -55,7 +56,7 @@
     "@changesets/cli": "^2.29.5",
     "@eslint/js": "^9.26.0",
     "@manypkg/cli": "^0.21.4",
-    "@preconstruct/cli": "^2.8.1",
+    "@preconstruct/cli": "^2.8.12",
     "@types/node": "^20.14.13",
     "babel-preset-solid": "^1.8.4",
     "eslint": "^9.26.0",
