--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -30,7 +30,9 @@
     "packages/**/{true,false}.ts",
     // file acts as a type test
     "packages/xstate-svelte/test/interpreterAsReadable.svelte",
-    "docs/**"
+    "docs/**",
+    // copy-pasted implementation from alien-signals
+    "packages/xstate-store/src/alien.ts"
   ],
   "ignoreBinaries": ["svelte-check", "docs:build"],
   "ignoreDependencies": [
