--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -32,7 +32,8 @@
     "packages/xstate-svelte/test/interpreterAsReadable.svelte",
     "docs/**",
     // copy-pasted implementation from alien-signals
-    "packages/xstate-store/src/alien.ts"
+    "packages/xstate-store/src/alien.ts",
+    "scripts/**"
   ],
   "ignoreBinaries": ["svelte-check", "docs:build"],
   "ignoreDependencies": [
