[@xstate/store] Store framework adapters (#5441)
* Store framework packages WIP

* Changeset

* Refactor

* Preact: useSyncExternalStore

* Whatever this is

* Remove tslib

* Update pnpm-lock.yaml

* Add peer dependencies to .knip.jsonc

* send -> trigger

* Get outta here

* Lint

* Update changesets

* Remove console logs, use deprecations instead

* Remove script, revert tests

* Remove script

* Clean up changesets

--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -32,7 +32,8 @@
     "packages/xstate-svelte/test/interpreterAsReadable.svelte",
     "docs/**",
     // copy-pasted implementation from alien-signals
-    "packages/xstate-store/src/alien.ts"
+    "packages/xstate-store/src/alien.ts",
+    "scripts/**"
   ],
   "ignoreBinaries": ["svelte-check", "docs:build"],
   "ignoreDependencies": [
@@ -42,7 +43,11 @@
     "solid-js",
     "xstate",
     "@types/ws",
-    "vitest"
+    "vitest",
+    // peer dependencies that may be needed but not directly imported
+    "@angular/compiler-cli",
+    "@sveltejs/vite-plugin-svelte",
+    "@testing-library/svelte"
   ],
   "vitest": {
     "config": ["vitest.config.mts", "vitest.config.**.mts"],
