--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -72,6 +72,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-vue": "^5.1.2",
+    "@vue/test-utils": "^2.4.6",
     "@xstate/react": "workspace:^",
     "@xstate/vue": "workspace:^",
     "immer": "^10.0.2",
