--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test:watch": "vitest",
     "test:core": "vitest run --project xstate",
     "test:core:watch": "vitest --project xstate",
-    "test:store": "vitest run --project @xstate/store",
-    "test:store:watch": "vitest --project @xstate/store",
+    "test:store": "vitest run --project @xstate/store*",
+    "test:store:watch": "vitest --project @xstate/store*",
     "changeset": "changeset",
     "release": "pnpm -r publish --access=public && changeset tag",
     "version": "changeset version"
